# boundary-examples

./: .gitignore  README.md
examples/cv-scanner/: .env.example  README.md
examples/cv-scanner/node/: package-lock.json  package.json  screenings.json
examples/cv-scanner/node/src/: contract.ts  index.ts  scan.ts  store.ts
examples/cv-scanner/python/: pyproject.toml  screenings.json
examples/cv-scanner/python/src/: contract.py  main.py  scan.py  store.py
examples/cv-screener/: README.md
examples/receipt-scanner/: .env.example  README.md
examples/receipt-scanner/node/: package-lock.json  package.json
examples/receipt-scanner/node/src/: contract.ts  index.ts  scan.ts  store.ts
examples/receipt-scanner/python/: pyproject.toml
examples/receipt-scanner/python/src/: contract.py  main.py  scan.py  store.py
temp/cv-generator/: .env.example  README.md  package-lock.json  package.json  tsconfig.json
temp/cv-generator/src/: cli.ts  env.ts  openrouter.ts  render.ts  samples.ts  schema.ts  smoke-test.ts  utils.ts
