[build-system]
requires = ["setuptools>=45"]
build-backend = "setuptools.build_meta"

[project]
name = "boundary-expenses-python"
version = "1.0.0"
description = "AI receipt scanner CLI — showcasing withboundary/contract-py"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "withboundary-contract @ git+https://github.com/withboundary/contract-py.git",
    "withboundary-sdk @ git+https://github.com/withboundary/sdk-py.git",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
